--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -20,7 +20,7 @@
   
     {% assign dil = 'en' %}
     {% assign baslangic = 'Start' %}
-    {% assign kurulum = 'Install' %}
+    {% assign kurulum = 'Installation' %}
     {% assign ekran_orgusu = 'Screen System' %}
     {% assign kap_orgusu = 'Grid System' %}
     {% assign parca_duzeni = 'Piece System' %}
