--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -23,11 +23,11 @@
     {% assign kurulum = 'Installation' %}
     {% assign ekran_orgusu = 'Screen System' %}
     {% assign kap_orgusu = 'Grid System' %}
-    {% assign parca_duzeni = 'Piece System' %}
-    {% assign dizem_duzeni = 'Rytm System' %}
-    {% assign genlesme_duzeni = 'Grow System' %}
-    {% assign aralik_duzeni = 'Space System' %}
-    {% assign bicim_duzeni = 'Type System' %}
+    {% assign parca_duzeni = 'Piece Layout' %}
+    {% assign dizem_duzeni = 'Rytm Layout' %}
+    {% assign genlesme_duzeni = 'Grow Layout' %}
+    {% assign aralik_duzeni = 'Space Layout' %}
+    {% assign bicim_duzeni = 'Type Layout' %}
     {% assign konumlama = 'Positioning' %}
     {% assign siralama = 'Order' %}
     {% assign olcekler = 'Scales' %}
