--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -24,7 +24,7 @@
     {% assign ekran_orgusu = 'Screen System' %}
     {% assign kap_orgusu = 'Grid System' %}
     {% assign parca_duzeni = 'Piece Layout' %}
-    {% assign dizem_duzeni = 'Rytm Layout' %}
+    {% assign dizem_duzeni = 'Rhythm Layout' %}
     {% assign genlesme_duzeni = 'Grow Layout' %}
     {% assign aralik_duzeni = 'Space Layout' %}
     {% assign bicim_duzeni = 'Type Layout' %}
