--- a/_includes/s1n0/head-en.html
+++ b/_includes/s1n0/head-en.html
@@ -4,6 +4,7 @@
 <title>{% if page.title %}{{ page.title }}{% endif %}</title>
 
 <!-- Kök -->
+<link href="/assets/deveb-s1n0/deveb.css" rel="stylesheet">
 <link href="/assets/deveb-s1n0/deveb-en.css" rel="stylesheet">
 <link href="/assets/css/imge.css" rel="stylesheet">
 
