--- a/assets/deveb-s1n0/_dil-en.scss
+++ b/assets/deveb-s1n0/_dil-en.scss
@@ -79,6 +79,7 @@ $diğerlerini-gizle: hide-other;
 /* */
 $aralık: aralık;
 $araları: araları;
+$araları-aralık: space-between;
 $oluk-çevre: oluk-çevre;
 $oluk: oluk;
 $oluk-yok: oluk-yok;
