--- a/assets/deveb-s1n0/_dil-tr.scss
+++ b/assets/deveb-s1n0/_dil-tr.scss
@@ -79,6 +79,7 @@ $diğerlerini-gizle: diğerlerini-gizle;
 /* */
 $aralık: aralık;
 $araları: araları;
+$araları-aralık: araları-aralık;
 $oluk-çevre: oluk-çevre;
 $oluk: oluk;
 $oluk-yok: oluk-yok;
