--- a/assets/deveb-s1n0/_kap-orgusu.scss
+++ b/assets/deveb-s1n0/_kap-orgusu.scss
@@ -77,25 +77,25 @@
     [data-#{$ekran}*="#{$aralık}-ta3"]{margin-top: 20px;margin-bottom: 20px;}
 
 
-    [data-#{$ekran}~="araları-#{$aralık}-1"][data-#{$ekran}]{
+    [data-#{$ekran}~="#{$araları-aralık}-1"][data-#{$ekran}]{
       width: calc(100% / var(--parçalık) * var(--parça) + 10px);
       max-width: calc(100% / var(--parçalık) * var(--parça) + 10px);
       margin: -10px 0 0 -10px;
     }
-    [data-#{$ekran}~="araları-#{$aralık}-2"][data-#{$ekran}]{
+    [data-#{$ekran}~="#{$araları-aralık}-2"][data-#{$ekran}]{
       width: calc(100% / var(--parçalık) * var(--parça) + 15px);
       max-width: calc(100% / var(--parçalık) * var(--parça) + 15px);
       margin: -15px 0 0 -15px;
     }
-    [data-#{$ekran}~="araları-#{$aralık}-3"][data-#{$ekran}]{
+    [data-#{$ekran}~="#{$araları-aralık}-3"][data-#{$ekran}]{
       width: calc(100% / var(--parçalık) * var(--parça) + 20px);
       max-width: calc(100% / var(--parçalık) * var(--parça) + 20px);
       margin: -20px 0 0 -20px;
     }
 
-    [data-#{$ekran}~="araları-#{$aralık}-1"] > *{padding-left:10px;padding-top:10px;}
-    [data-#{$ekran}~="araları-#{$aralık}-2"] > *{padding-left:15px;padding-top:15px;}
-    [data-#{$ekran}~="araları-#{$aralık}-3"] > *{padding-left:20px;padding-top:20px;}
+    [data-#{$ekran}~="#{$araları-aralık}-1"] > *{padding-left:10px;padding-top:10px;}
+    [data-#{$ekran}~="#{$araları-aralık}-2"] > *{padding-left:15px;padding-top:15px;}
+    [data-#{$ekran}~="#{$araları-aralık}-3"] > *{padding-left:20px;padding-top:20px;}
     [data-#{$ekran}~="dengeli-#{$aralık}-1"] > *{padding:10px;}
     [data-#{$ekran}~="dengeli-#{$aralık}-2"] > *{padding:15px;}
     [data-#{$ekran}~="dengeli-#{$aralık}-3"] > *{padding:20px;}
@@ -138,6 +138,7 @@
       padding: 0
     }
   }
+  
   @mixin dizem-düzeni($ekran){
     [data-#{$ekran}~="1r"] > div, [data-#{$ekran}~="1r"] > [data-gnl]:not([data-gnl*="p"]){   width: calc(100% / 1); max-width: calc(100% / 1);    }
     [data-#{$ekran}~="2r"] > div, [data-#{$ekran}~="2r"] > [data-gnl]:not([data-gnl*="p"]){   width: calc(100% / 2); max-width: calc(100% / 2);    }
