--- a/_layouts/s1n0/default.html
+++ b/_layouts/s1n0/default.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-{% include s1n0/head-en.html %}
+{% include s1n0/head.html %}
 </head>
 <body data-gnl="tamekran">
   <div data-gnl="sığ oluk-çevre">
-    <div id="sol-alan" data-gnl="üstte" data-kçk="4 22p sığ oluk-çevre">
-      <div data-gnl=" göbekte geniş-aralıklı" data-dev="2 3p sağda-ol göbekte-ol">
+    <div id="sol-alan" data-gnl="t" data-kçk="4 22p sığ oluk-çevre">
+      <div data-gnl="o geniş-aralıklı" data-dev="2 3p _s _o">
         <a data-gnl="0" href="/" class="logo2">deveb</a>
-        <span class="birincil" data-gnl="0 göbekte-ol" data-imgelik="kapsül küçük">
+        <span class="birincil" data-gnl="0 _o" data-imgelik="kapsül küçük">
           {% if page.url contains '/tr/' %}Sürüm{% endif %}
           {% if page.url contains '/en/' %}Version{% endif %} 1.0
         </span>
-        <span class="birincil" data-gnl="0 göbekte-ol" data-imgelik="kapsül küçük">
+        <span class="birincil" data-gnl="0 _o" data-imgelik="kapsül küçük">
           {% if page.url contains '/tr/' %}Türkçe{% endif %}
           {% if page.url contains '/en/' %}English{% endif %}
         </span>
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div id="içerik" data-kçk="18 22p sığ oluk-çevre">
-      <div data-gnl="üstte" data-kçk="20 24p" style="padding-left:30px; padding-right:30px;">
+      <div data-gnl="t" data-kçk="20 24p" style="padding-left:30px; padding-right:30px;">
         {% if page.title %}
           <h1 class="sayfa">{{ page.title }}</h1>
         {% endif %}
