--- a/assets/deveb-s1n0/_dil-en.scss
+++ b/assets/deveb-s1n0/_dil-en.scss
@@ -43,8 +43,8 @@ $sağda-ol: sağda-ol;
 $ortada-ol: ortada-ol;
 $solda-ol: solda-ol;
 
-$araları-aralık: araları-aralık;
-$dengeli-aralık: dengeli-aralık;
+$araları-aralık: space-between;
+$dengeli-aralık: space-around;
 $uzat: uzat;
 $uzun-ol: uzun-ol;
 
@@ -79,7 +79,6 @@ $diğerlerini-gizle: hide-other;
 /* */
 $aralık: aralık;
 $araları: araları;
-$araları-aralık: space-between;
 $oluk-çevre: oluk-çevre;
 $oluk: oluk;
 $oluk-yok: oluk-yok;
