--- a/_layouts/s1n0/default.html
+++ b/_layouts/s1n0/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-{% include s1n0/head.html %}
+{% include s1n0/head-en.html %}
 </head>
 <body data-gnl="tamekran">
   <div data-gnl="sığ oluk-çevre">
