--- a/_layouts/s1n0/default.html
+++ b/_layouts/s1n0/default.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div id="içerik" data-kçk="18 22p sığ oluk-çevre">
-      <div data-gnl="t" data-kçk="20 24p" style="padding-left:30px; padding-right:30px;">
+      <div data-gnl="lt" data-kçk="20 24p" style="padding-left:30px; padding-right:30px;">
         {% if page.title %}
           <h1 class="sayfa">{{ page.title }}</h1>
         {% endif %}
