--- a/_layouts/sosero2/varsayilan.html
+++ b/_layouts/sosero2/varsayilan.html
@@ -7,7 +7,7 @@
 
   <div data-gnl="sığ">
 
-    <div data-gnl="lt" data-byk="sütun 1g">
+    <div data-gnl="lt" data-byk="sütun 1g kaymadan">
 
         {{content}}
 
