--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -99,7 +99,7 @@
       </ul>
     </li>
     <li>
-      <a href="https://jsfiddle.net/deveb/1mwjkctx/">{{ surumudene }}</a>
+      <a href="https://jsfiddle.net/deveb/1mwjkctx/">{{ surumdene }}</a>
     </li>
     <!--
     <li class="{% if page.url contains '/sekme-orgusu' %}etkin{% endif %}">
