--- a/_layouts/s1n0/varsayilan.html
+++ b/_layouts/s1n0/varsayilan.html
@@ -35,6 +35,7 @@
   </div>
   <footer>
   {% include s1n0/foot.html %}
+  <iframe src="https://discordapp.com/widget?id=286591644730392577&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
   </footer>
 </body>
 </html>
